# ai_daptable

./: .gitignore  README.md  bun.lockb  docker-compose.yaml  package-lock.json  package.json  vite.config.js
backend/: .dockerignore  .env  2025-09-19.csv  Dockerfile  automation.db  data_analysis.py  data_descriptives.py  data_sim.py  database.py  docker-compose.yaml  main.py  models.py  pyproject.toml  trials.csv  trials_export.json
backend/data/: 2025-09-19-adaptable-n1.csv  2025-10-03_p10_c6_t12.csv  2025_09_17_all_conditions_n1.csv
frontend/: Dockerfile  bun.lockb  nginx.conf  ngnix.conf  package.json  vite.config.js
frontend/src/: App.jsx  index.css  index.html
frontend/src/composables/: getURLconfig.js  handleFeatureClassification.js  handleNextURL.js  handleTrialSubmit.js  logDecision.js  resetLocalStorages.js
frontend/src/constants/: URL_config.js  adaptable.js  config.js  freezeProbeConfig.js
frontend/src/context/: AdaptableContext.jsx  ConditionContext.jsx  FreezeProbeContext.jsx  ParticipantContext.jsx  (+2 more)
src/: App.jsx  index.css
src/components/: AI_Action_Info.jsx  AI_Action_info_box.jsx  AI_Action_request.jsx  AI_classification.jsx  AI_veto_request.jsx  Header.jsx
src/constants/: aiLoadingTimes.js
src/context/: ButtonContext.jsx  UrlCounterContext.jsx
src/frontend/: App.jsx
src/pages/: 01_manual.jsx  02_info_acquisition.jsx  03_info_analysis.jsx  04_allow.jsx  04_allow_malicious.jsx  05_veto.jsx  05_veto_non_malicious.jsx  06_auto.jsx  06_auto_malicious.jsx  About.jsx  Contact.jsx  Home.jsx  info_acquisition.jsx  manual.jsx
(+182 files in other folders)
